feat: JDK 18 loom and gradle 7.2 update